# vhdl-fmt

./: .clang-format  .clang-tidy  .clangd  .cspell.yaml  .cspell_ignored  .cspell_ignored.txt  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  clang.profile  conanfile.txt  docker-compose.yaml  docker-compose.yml  nodes  sonar-project.properties  temp_test.cpp  update_tests.py  update_translators.py  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/ast/: .clang-tidy  CMakeLists.txt  design_file.hpp  node.hpp  visitor.hpp  visitor_base.hpp
src/ast/nodes/: .clang-tidy  declarations.hpp  design_file.hpp  design_units.hpp  entity.hpp  expressions.hpp  ranges.hpp  statements.hpp
src/builder/: CMakeLists.txt  ast_builder.cpp  ast_builder.hpp  comment_binder.cpp  comment_binder.hpp  expr_helpers.hpp  translator.cpp  translator.hpp  typed_visitor.hpp  visitor.cpp  visitor.hpp
src/builder/adapter/: .clang-format  antlr_void_adapter.hpp  base_void_visitor.hpp  void_visitor.hpp
src/builder/assembly/: assembler.hpp  builder_scope.hpp  builder_sink.hpp  node_builder.hpp  scope.hpp  sink.hpp
src/builder/translators/: .clang-tidy  expressions.cpp  translator_concurrent.cpp  translator_constraint.cpp  translator_control_flow.cpp  translator_decl.cpp  translator_declaration.cpp  translator_expr.cpp  translator_expr_composites.cpp  translator_expr_names.cpp  translator_expr_operators.cpp  translator_expression.cpp  translator_sequential.cpp  translator_statement.cpp  translator_stmt.cpp  translator_subprogram.cpp  translator_unit.cpp
src/builder/trivia/: comment_sink.hpp  newline_sink.hpp  trivia_binder.cpp  trivia_binder.hpp  utils.hpp
src/builder/visitors/: concurrent_assignment_visitor.hpp  constraint_visitor.hpp  sequential_statement_visitor.hpp  target_visitor.hpp  visitor_decl.cpp  visitor_expr.cpp  visitor_unit.cpp
src/cli/: ArgumentParser.cpp  ArgumentParser.hpp  CMakeLists.txt  CliParser.cpp  CliParser.hpp  ConfigManager.cpp  ConfigManager.hpp  ConfigReader.cpp  ConfigReader.hpp  argument_parser.cpp  argument_parser.hpp  config_reader.cpp  config_reader.hpp  main.cpp
src/common/: CMakeLists.txt  Config.cpp  Config.hpp  config.cpp  config.hpp  factory.cpp  factory.hpp  logger.hpp  overload.hpp  range_helpers.hpp  version.hpp.in
src/emit/: CMakeLists.txt  debug_printer.cpp  debug_printer.hpp  pretty_printer.hpp
src/emit/debug_printer/: debug_core.cpp  debug_decl.cpp  debug_expr.cpp  debug_stmt.cpp  debug_unit.cpp  expressions.cpp
src/emit/pretty_printer/: doc.cpp  doc.hpp  doc_impl.cpp  doc_impl.hpp  doc_utils.hpp  renderer.cpp  renderer.hpp  table.cpp  table.hpp  trivia.cpp
src/emit/pretty_printer/nodes/: clauses.cpp  constraints.cpp  declarations.cpp  design_file.cpp  design_units.cpp  expressions.cpp  statements.cpp
src/formatter/: CMakeLists.txt  placeholder.cpp
src/parser/: CMakeLists.txt  placeholder.cpp
tests/: .clang-tidy  CMakeLists.txt  test_argument_parser.cpp  test_comments.cpp  test_config_reader.cpp  test_constraints.cpp  test_declarations.cpp  test_expressions.cpp  test_newlines.cpp  test_ports.cpp  test_utils.hpp  test_yml.cpp
tests/ast/: CMakeLists.txt  test_utils.hpp
tests/ast/nodes/: test_association_list.cpp  test_trivia.cpp
tests/ast/nodes/clauses/: test_context_clause.cpp  test_generic_clause.cpp  test_library_clause.cpp  test_port_clause.cpp  test_use_clause.cpp
tests/ast/nodes/constraints_ranges/: test_index_constraint.cpp  test_range_constraint.cpp
tests/ast/nodes/declarations/: test_alias.cpp  test_alias_decl.cpp  test_attribute.cpp  test_attribute_decl.cpp  test_component.cpp  test_component_decl.cpp  test_constant.cpp  test_constant_decl.cpp  test_constraint.cpp  test_constraints.cpp  test_declaration.cpp  test_declarations.cpp  test_disconnect_spec.cpp  test_file.cpp  test_file_decl.cpp  test_function.cpp  test_function_decl.cpp  test_generic_param.cpp  test_group.cpp  test_group_decl.cpp  test_impure_function.cpp  test_library_clause.cpp  test_port.cpp  test_procedure.cpp  test_procedure_decl.cpp  test_protected_type.cpp  test_shared_variable.cpp  test_signal.cpp  test_signal_decl.cpp  test_subtype.cpp  test_subtype_decl.cpp  test_type.cpp  test_type_decl.cpp  test_use_clause.cpp  test_variable.cpp  test_variable_decl.cpp
tests/ast/nodes/design_units/: test_architecture.cpp  test_comments.cpp  test_configuration.cpp  test_context.cpp  test_entity.cpp  test_entity_instantiation.cpp  test_interface_package.cpp  test_newlines.cpp  test_package.cpp  test_package_body.cpp  test_package_instantiation.cpp
tests/ast/nodes/expressions/: test_access_deref.cpp  test_aggregate.cpp  test_allocator.cpp  test_attribute.cpp  test_attribute_expr.cpp  test_binary.cpp  test_binary_expr.cpp  test_call_expr.cpp  test_conditional.cpp  test_conditional_expr.cpp  test_expressions.cpp  test_external_name.cpp  test_function_call.cpp  test_group.cpp  test_group_expr.cpp  test_indexed.cpp  test_indexed_expr.cpp  test_matching_rel_ops.cpp  test_name.cpp  test_open.cpp  test_open_expr.cpp  test_paren.cpp  test_paren_expr.cpp  test_qualified.cpp  test_qualified_expr.cpp  test_range.cpp  test_range_expr.cpp  test_reduction_ops.cpp  test_slice.cpp  test_slice_expr.cpp  test_string_literal.cpp  test_token.cpp  test_token_expr.cpp  (+3 more)
tests/benchmarks/: .clang-tidy  CMakeLists.txt  benchmark_utils.cpp  benchmark_utils.hpp  benchmarks.cpp  compare_benchmarks.py
tests/cli/: CMakeLists.txt  test_argument_parser.cpp  test_config_reader.cpp
tests/common/: test_utils.hpp
tests/data/: comments.vhdl  simple.vhdl
tests/data/config_file/: malformed.yaml  valid_complete.yaml
tests/data/vhdl/: big.vhd  ports.vhd  ports.vhdl  simple.vhd
tests/data/yml_full/: .vhdlfmt.yml
tests/data/yml_partial/: .vhdlfmt.yml
tests/emit/: CMakeLists.txt  test_utils.hpp
tests/emit/pretty_printer/: test_doc.cpp  test_optimizer.cpp  test_table.cpp  test_trivia.cpp
tests/integration/: CMakeLists.txt  placeholder_test.cpp.bak
tests/unit/: CMakeLists.txt  placeholder_test.cpp
(+73 files in other folders)
